# da_case_studies

./: .Renviron_sample  .dockerignore  .gitignore  LICENSE  Pipfile  README.md  change_log_v0_9_0.md  da_env_windows.yml  daenv.yml  daenv_macos.yml  daenv_windows.yml  global.R  packages_win.txt  pyproject.toml  requirements.txt  sample_use_case_initialisation.R  set-data-directory-example.R  set-data-directory-example.do  set-data-directory.R  set-data-directory.do  start.R
.devcontainer/: README.md  devcontainer.json  setup.sh
ch00-tech-prep/: README.md  ch00_install_libraries.R  ch00_install_libraries.do  ch00_install_libraries_NEW.R  ch00_install_libraries_OLD.R  da-setup-codespaces.md  da-setup-python.md  da-setup-r.md  da-setup-stata.md  da_helper_functions.R  daenv_linux.yml  daenv_macos.yml  daenv_windows.yml  py_helper_functions.py  readme.txt  requirements.txt  requirements_pipenv.txt  run_all_python.py  run_all_r.sh  set-data-directory-example.R  test_env.py  theme_bg.R
ch01-hotels-data-collect/: ch01-hotels-data-collect.R  ch01-hotels-data-collect.do  ch01-hotels-data-collect.ipynb  ch01-hotels-data-collect_v18.do  ch01_hotels-data-collect.R  ch01_hotels-data-collect.do
ch02-football-manager-success/: ch02-football-manager-success.R  ch02-football-manager-success.do  ch02-football-manager-success.ipynb  ch02-football-manager-success_v18.do
ch02-hotels-data-prep/: ch02-hotels-data-prep.R  ch02-hotels-data-prep.do  ch02-hotels-data-prep.ipynb  ch02-hotels-data-prep_v18.do
ch02-immunization-crosscountry/: ch02-immunization-crosscountry.R  (+3 more)
(+381 files in other folders)
