[project]
name = "da-case-studies"
version = "0.0.0"
description = "Python environment for the Data Analysis case studies"
requires-python = ">=3.12.4,<3.13"
dependencies = [
    "arch==7.0.0",
    "beautifulsoup4==4.12.3",
    "cmdstanpy<1.3.0",
    "great-tables==0.14.0",
    "lime==0.2.0.1",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pandas-market-calendars==4.4.1",
    "pmdarima==2.0.4",
    "prophet==1.2.1",
    "pydotplus==2.0.2",
    "pyfixest==0.30.2",
    "pysyncon==1.5.1",
    "regex==2024.9.11",
    "scikit-image==0.25.2",
    "scikit-learn==1.5.2",
    "scikit-misc==0.5.1",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "shap==0.46.0",
    "stargazer==0.0.7",
    "statsmodels==0.14.4",
    "tabulate==0.9.0",
    "xgboost==3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel",
    "nbconvert",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
